--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "BGG Price Checker",
   "version": "1.0.0",
-  "description": "Shows board game prices from BoardGamePrices.co.uk while browsing BoardGameGeek",
+  "description": "Compare board game prices from multiple retailers instantly while browsing BoardGameGeek - see real-time pricing, shipping costs, and availability",
   "permissions": [
     "activeTab",
     "storage",
